<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/least_black"
    tools:context="com.learnexo.main.RegistrationActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintVertical_bias="1.0">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/scrollConstaint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:padding="10dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollConstaint">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:theme="@style/TextLabel">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/regFirstName"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:theme="@style/TextLabel">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/regLastName"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:theme="@style/TextLabel">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/regEmail"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/email_address_hint"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:theme="@style/TextLabel">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/regPassword"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/regCreateBtn"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:background="@drawable/login_button"
                android:onClick="registerBtnListener"
                android:text="@string/sign_up_reg"
                android:textColor="#ffffff" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/undertaking"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/t_amp_c"
                    android:textColor="@color/com_facebook_blue" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
